# .maestro/app.yaml
appId: com.rnmaestro # applicationId
---
- launchApp
# en: Check if "Title is required" is visible
# vi: Kiểm tra hiện thông báo "Title is required"
- tapOn: "Add task"
- assertVisible: "Title is required"
- tapOn: "OK"

# en: Check if new task is visible
# vi: Kiểm tra thêm task
- tapOn: "Enter your title"
- inputText: "Task from maestro"
- hideKeyboard # Note 1
- tapOn: "Add task"
- assertVisible: "Task from maestro"